# smugVision

./: .config_implementation_summary.md  .gitignore  .smugmug_implementation_summary.md  CHANGELOG.md  DESIGN.md  MANIFEST.in  QUICKSTART.md  README.md  README_CONFIG.md  README_FACE_RECOGNITION.md  README_PROCESSOR.md  README_SMUGMUG_TESTING.md  SMUGMUG_OAUTH_GUIDE.md  TIMING_ANALYSIS.md  config.yaml.example  locations.yaml.example  optimize_reference_faces.py  pyproject.toml  requirements.txt  test_config.py  test_vision.py
scripts/: __init__.py  example_workflow.sh  find_album_key.py  get_smugmug_tokens.py
smugvision/: __init__.py  __main__.py  _version.py
smugvision/cache/: __init__.py  manager.py
smugvision/config/: __init__.py  defaults.py  manager.py
smugvision/face/: __init__.py  recognizer.py
smugvision/processing/: __init__.py  metadata.py  processor.py
smugvision/scripts/: __init__.py  get_tokens.py  optimize_faces.py  setup_config.py
smugvision/smugmug/: __init__.py  client.py  exceptions.py  models.py
smugvision/utils/: __init__.py  exif.py  exif_optimized.py  locations.py  relationships.py
smugvision/vision/: __init__.py  base.py  exceptions.py  factory.py  llama.py
smugvision/web/: __init__.py  app.py  cli.py
smugvision/web/routes/: __init__.py  api.py  pages.py
smugvision/web/services/: __init__.py  preview.py
smugvision/web/static/css/: style.css
smugvision/web/static/js/: app.js
smugvision/web/templates/: base.html  faces.html  index.html  preview.html  relationships.html
tests/: __init__.py  debug_face_recognition.py  test_processor.py  test_smugmug.py
